--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>barbearia Alura</title>
+    <title>Barbearia Alura</title>
     <link rel="stylesheet" href='style.css'>
     <style>
 
     </style>
 </head>
     <body>
+        <img id="banner" src="banner.jpg">
+
         <h1 style="text-align: center; background: #CCCCCC;">Sobre a Barbearia Alura</h1>
 
         <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
