--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href='style.css'>
 </head>
     <body>
-        <h1>Sobre a Barbearia Alura</h1>
+        <header>
+            <h1 class="titulo-principal">Barbearia Alura</h1>
+        </header>
+        
         <img id="banner" src="banner.jpg">
         <div class="principal">
-            <h1 style="text-align: center; background: #CCCCCC;">Sobre a Barbearia Alura</h1>
+            <h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -18,7 +21,7 @@
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
         </div>
         <div class="beneficios">
-            <h2>Beneficios</h2>
+            <h3 class="titulo-centralizado">Beneficios</h3>
             
             <ul>
                 <li class="itens">Atendimento aos clientes</li>
@@ -26,6 +29,7 @@
                 <li class="itens">Localização</li>
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
+            <img src="beneficios.jpg" class="imgbnfc">
         </div>
     </body>
 </html>
