pagina do produto finalizada e adicionados header e footer na home

--- a/produtos.html
+++ b/produtos.html
@@ -43,6 +43,10 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="imagens/logo-branco.png">
+        <p class="copyright"> &copy Copyrigth Barbearia Alura 2021</p>
+    </footer>
 </body>
 
 </html>
